--- a/modulo2.html
+++ b/modulo2.html
@@ -69,10 +69,10 @@
                         <table border=1>
                             <!-- capitulo 1 -->
                             <tr>
-                                <td rowspan=5>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
-                                <td rowspan=5><a href="curso/modulo2capitulo1.pptx">Slides</a></td>
-                                <td rowspan=5><a target="_blank" href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=5><a target="_blank" href="curso/modulo2respostas1.html">Respostas</a></td>
+                                <td rowspan=6>Cap&iacute;tulo 1 - Paradigma de Orienta&ccedil;&atilde;o a Objetos</td>
+                                <td rowspan=6><a href="curso/modulo2capitulo1.pptx">Slides</a></td>
+                                <td rowspan=6><a target="_blank" href="curso/modulo2lista1.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=6><a target="_blank" href="curso/modulo2respostas1.html">Respostas</a></td>
                                 <td><a href="https://youtu.be/g465hxGKkzk">Videoaula 27/06/2015</a></td>
                             </tr>
                             <tr>
@@ -86,6 +86,9 @@
                             </tr>
                             <tr>
                                 <td><a href="https://youtu.be/UZEw1CsvYeg">Videoaula 01/08/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/3SYI9HD3AMs">Videoaula 08/08/2015</a></td>
                             </tr>
 
                             <!-- capitulo 2 -->
