--- a/curso/modulo1lista3.html
+++ b/curso/modulo1lista3.html
@@ -30,19 +30,43 @@
  <body>
   <h1>Curso de Programação C#</h1>
   <h2>William Ivanski</h2>
-  <h3>Lista de Exercícios Capítulo 3</h3>
+  <h3>Lista de Exercícios Módulo I Capítulo 3</h3>
   <hr/>
-  <p>1) Solicite um número ao usuário e informe se é par ou ímpar.</p>
-  <p>2) Solicite um número ao usuário e compare com zero de todas as formas possíveis (==, !=, &lt;, &gt;, &lt;= ou &gt;=).</p>
-  <p>3) Solicite um número ao usuário, e informe em qual dezena ele se encontra (de 1 a 10, de 11 a 20, etc).</p>
-  <p>4) Solicite um número ao usuário e imprima a sua <strong>raiz quadrada</strong>.</p>
-  <p>5) Modifique o <strong>programa 2.7</strong> (cadastro de aluno), para escrever o sexo por extenso ('masculino' para 'M' e 'feminino' para 'F'). Se o usuário digitar um sexo inválido, informe um erro e encerre o programa.</p>
-  <p>6) Modifique o programa acima para dizer se o aluno foi <strong>aprovado ou reprovado</strong>, baseado na nota média informada pelo usuário. A nota deve estar entre 0,0 e 10,0, se não estiver, informe um erro e encerre o programa. A média para estar aprovado é 7,0.</p>
-  <p>7) Modifique o programa acima para, ao invés de solicitar a nota média ao usuário, solicitar as <strong>notas de 3 provas</strong>, P1, P2 e P3. A informação de se está aprovado ou não deve se basear na <strong>média aritmética</strong> das notas em cada uma das 3 provas.</p>
-  <p>8) Modifique o programa acima para considerar, ao invés de média aritmética, <strong>média ponderada</strong>. A P1 tem peso 1, a P2 tem peso 2 e a P3 tem peso 3.</p>
-  <p>9) Solicite duas frações a/b e c/d, e imprima a fração e/f resultante do <strong>produto entre as duas frações</strong>.</p>
-  <p>10) Solicite duas frações a/b e c/d, e imprima a fração e/f resultante da <strong>soma entre as duas frações</strong>.</p>
-  <p>11) Junte os programas <strong>soma</strong>, <strong>subtração</strong>, <strong>multiplicação</strong> e <strong>divisão</strong> em um só programa. O usuário precisa entrar com dois números e também um char para informar qual é a operação desejada.</p>
-  <p>12) Modifique o programa 3.8 acima para que exista uma variável chamada <strong>situacao</strong> do aluno, podendo assumir os valores APROVADO ou REPROVADO.</p>
+  <p>
+    1) Solicite um número ao usuário e informe se é par ou ímpar.
+  </p>
+  <p>
+    2) Solicite um número ao usuário e compare com zero de todas as formas possíveis (==, !=, &lt;, &gt;, &lt;= ou &gt;=).
+  </p>
+  <p>
+    3) Solicite um número ao usuário, e informe em qual dezena ele se encontra (de 1 a 10, de 11 a 20, etc).
+  </p>
+  <p>
+    4) Solicite um número ao usuário e imprima a sua <strong>raiz quadrada</strong>.
+  </p>
+  <p>
+    5) Modifique o <strong>programa 2.7</strong> (cadastro de aluno), para escrever o sexo por extenso ('masculino' para 'M' e 'feminino' para 'F'). Se o usuário digitar um sexo inválido, informe um erro e encerre o programa.
+  </p>
+  <p>
+    6) Modifique o programa acima para dizer se o aluno foi <strong>aprovado ou reprovado</strong>, baseado na nota média informada pelo usuário. A nota deve estar entre 0,0 e 10,0, se não estiver, informe um erro e encerre o programa. A média para estar aprovado é 7,0.
+  </p>
+  <p>
+    7) Modifique o programa acima para, ao invés de solicitar a nota média ao usuário, solicitar as <strong>notas de 3 provas</strong>, P1, P2 e P3. A informação de se está aprovado ou não deve se basear na <strong>média aritmética</strong> das notas em cada uma das 3 provas.
+  </p>
+  <p>
+    8) Modifique o programa acima para considerar, ao invés de média aritmética, <strong>média ponderada</strong>. A P1 tem peso 1, a P2 tem peso 2 e a P3 tem peso 3.
+  </p>
+  <p>
+    9) Solicite duas frações a/b e c/d, e imprima a fração e/f resultante do <strong>produto entre as duas frações</strong>.
+  </p>
+  <p>
+    10) Solicite duas frações a/b e c/d, e imprima a fração e/f resultante da <strong>soma entre as duas frações</strong>.
+  </p>
+  <p>
+    11) Junte os programas <strong>soma</strong>, <strong>subtração</strong>, <strong>multiplicação</strong> e <strong>divisão</strong> em um só programa. O usuário precisa entrar com dois números e também um char para informar qual é a operação desejada.
+  </p>
+  <p>
+    12) Modifique o programa 3.8 acima para que exista uma variável chamada <strong>situacao</strong> do aluno, podendo assumir os valores APROVADO ou REPROVADO.
+  </p>
  </body>
 </html>
