--- a/curso/modulo1lista2.html
+++ b/curso/modulo1lista2.html
@@ -29,15 +29,9 @@
   
  </head>
  <body>
-  <h1>
-   Curso de Programação C#
-  </h1>
-  <h2>
-   William Ivanski
-  </h2>
-  <h3>
-   Lista de Exercícios Módulo I Capítulo 2
-  </h3>
+  <h1>Curso de Programação C#</h1>
+  <h2>William Ivanski</h2>
+  <h3>Lista de Exercícios Módulo I Capítulo 2</h3>
   <hr/>
   <p>
    1) Solicite dois números ao usuário e imprima a <strong>soma</strong> dos dois números.
