--- a/curso/modulo1lista5-off.html
+++ b/curso/modulo1lista5-off.html
@@ -5,8 +5,8 @@
   <title>
    Curso de Programa&ccedil;&atilde;o C# - M&oacute;dulo I Lista 5
   </title>
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/styles/github.min.css" rel="stylesheet"/>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/highlight.min.js">
+  <link href="../github.min.css" rel="stylesheet"/>
+  <script src="../highlight.min.js">
   </script>
   <script>
    hljs.initHighlightingOnLoad();
