--- a/curso/modulo1respostas3-off.html
+++ b/curso/modulo1respostas3-off.html
@@ -4,8 +4,8 @@
   <title>
    Curso de Programa&ccedil;&atilde;o C# - M&oacute;dulo I Respostas 3
   </title>
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/styles/github.min.css" rel="stylesheet"/>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/highlight.min.js">
+  <link href="../github.min.css" rel="stylesheet"/>
+  <script src="../highlight.min.js">
   </script>
   <script>
    hljs.initHighlightingOnLoad();
