--- a/curso.html
+++ b/curso.html
@@ -62,8 +62,9 @@
                         <p>A princ&iacute;pio, o curso est&aacute; dividido em 3 m&oacute;dulos:<p>
                         <ul>
                             <li>C# básico;</li>
-                            <li>C# intermedi&aacute;rio (bibliotecas, manipula&ccedil;&atilde;o de arquivos e interfaces gr&aacute;ficas);</li>
-                            <li>Banco de dados.</li>
+                            <li>C# intermedi&aacute;rio (orienta&ccedil;&atilde;o a objetos, bibliotecas, manipula&ccedil;&atilde;o de arquivos e interfaces gr&aacute;ficas);</li>
+                            <li>Banco de dados;</li>
+                            <li>C# avan&ccedil;ado (mem&oacute;ria virtual e estruturas de dados)</li>
                         </ul>
                         <p>Videoaulas ao vivo pelo Google Hangouts, 1x por semana. As aulas s&atilde;o gravadas e postadas na &iacute;ntegra no Youtube.</p>
                         <p>Participe da nossa <a target="_blank" href="https://plus.google.com/u/0/communities/102417267229322909418">comunidade no Google+</a>.</p>
@@ -98,8 +99,8 @@
                             <li>M&oacute;dulo I: C# B&aacute;sico</li>
                             <li>M&oacute;dulo II: C# Intermedi&aacute;rio</li>
                             <li>M&oacute;dulo III: Bancos de Dados</li>
-                            <li>M&oacute;dulo IV: ASP.NET</li>
-                            <li>M&oacute;dulo V: Redes</li>
+                            <li>M&oacute;dulo IV: C# Avan&ccedil;ado</li>
+                            <li>M&oacute;dulo V: ASP.NET</li>
                         </ul>
                         <p><b>Como funciona o curso?</b></p>
                         <ul>
@@ -145,6 +146,7 @@
                             <li><a href="modulo1.html">M&oacute;dulo I</a></li>
                             <li><a href="modulo2.html">M&oacute;dulo II</a></li>
                             <li><a href="modulo3.html">M&oacute;dulo III</a></li>
+                            <li><a href="modulo4.html">M&oacute;dulo IV</a></li>
                         </ul>
                         <br/><br/>
                         <h2><a>Runtimes para Download</a></h2>
