--- a/modulo1.html
+++ b/modulo1.html
@@ -95,11 +95,14 @@
                             
                             <!-- capitulo 3 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 3 - Fluxo de C&oacute;digo e Operador Condicional</td>
-                                <td rowspan=1><a href="curso/modulo1capitulo3.pptx">Slides</a></td>
-                                <td rowspan=1><a target="_blank" href="curso/modulo1lista3.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 3 - Fluxo de C&oacute;digo e Operador Condicional</td>
+                                <td rowspan=2><a href="curso/modulo1capitulo3.pptx">Slides</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1lista3.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas3.html>Respostas</a></td>
                                 <td><a href="https://youtu.be/4mGlTcDmomg">Videoaula 08/08/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/x34a9MPve2o">Videoaula 15/08/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 4 -->
