--- a/modulo2.html
+++ b/modulo2.html
@@ -97,7 +97,7 @@
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td><a href="https://youtu.be/1DTjrreHiD4">Videoaula 15/08/2015</a></td>
                             </tr>
 
                             <!-- capitulo 3 -->
