--- a/modulo2.html
+++ b/modulo2.html
@@ -95,7 +95,7 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 2 - Bibliotecas</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo2lista2.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1>Respostas</td>
                                 <td><a href="https://youtu.be/1DTjrreHiD4">Videoaula 15/08/2015</a></td>
                             </tr>
