--- a/modulo1.html
+++ b/modulo1.html
@@ -98,7 +98,7 @@
                                 <td rowspan=2>Cap&iacute;tulo 3 - Fluxo de C&oacute;digo e Operador Condicional</td>
                                 <td rowspan=2><a href="curso/modulo1capitulo3.pptx">Slides</a></td>
                                 <td rowspan=2><a target="_blank" href="curso/modulo1lista3.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas3.html>Respostas</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas3.html">Respostas</a></td>
                                 <td><a href="https://youtu.be/4mGlTcDmomg">Videoaula 08/08/2015</a></td>
                             </tr>
                             <tr>
