--- a/modulo1.html
+++ b/modulo1.html
@@ -108,10 +108,10 @@
                             <!-- capitulo 4 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 4 - Operador de Repeti&ccedil;&atilde;o</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1><a href="curso/modulo1capitulo4.pptx">Slides</a></td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td><a href="https://youtu.be/iWkbWiNOM7I">Videoaula 22/08/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 5 -->
