--- a/curso/modulo1lista4.html
+++ b/curso/modulo1lista4.html
@@ -29,388 +29,93 @@
  </script>
  </head>
  <body>
-  <h1>
-   Curso de Programação C#
-  </h1>
-  <h2>
-   William Ivanski
-  </h2>
-  <h3>
-   Lista de Exercícios Capítulo 4
-  </h3>
+  <h1>Curso de Programação C#</h1>
+  <h2>William Ivanski</h2>
+  <h3>Lista de Exercícios Módulo I Capítulo 4</h3>
   <hr/>
   <p>
-   1) Modifique o exercício
-   <strong>
-    2.9
-   </strong>
-   (sequências de inteiros) para imprimir
-   <em>
-    N
-   </em>
-   inteiros, sendo
-   <em>
-    N
-   </em>
-   um número informado pelo usuário.
+   1) Modifique o exercício <strong>2.9</strong> (sequências de inteiros) para imprimir <em>N</em> inteiros, sendo <em>N</em> um número informado pelo usuário.
   </p>
   <p>
-   2) Utilize
-   <em>
-    while
-   </em>
-   no exercício
-   <strong>
-    2.10
-   </strong>
-   (tabuadas).
+   2) Utilize <em>while</em> no exercício <strong>2.10</strong> (tabuadas).
   </p>
   <p>
-   3) Modifique o exercício
-   <strong>
-    3.8
-   </strong>
-   (cadastro de aluno) para tratar para, caso o usuário digite valores inválidos no sexo e na nota das provas, o programar informar o erro e solicitar o valor novamente, até que o usuário digite um valor válido.
+   3) Modifique o exercício <strong>3.8</strong> (cadastro de aluno) para tratar para, caso o usuário digite valores inválidos no sexo e na nota das provas, o programar informar o erro e solicitar o valor novamente, até que o usuário digite um valor válido.
   </p>
   <p>
    4) Dada uma coleção de números naturais terminada por 0, imprimir seus quadrados.
   </p>
   <p>
-   5) Dado
-   <em>
-    N
-   </em>
-   , calcular a soma dos
-   <em>
-    N
-   </em>
-   primeiros números naturais.
+   5) Dado <em>N</em>, calcular a soma dos <em>N</em> primeiros números naturais.
   </p>
   <p>
-   6) Dado
-   <em>
-    N
-   </em>
-   , imprimir os
-   <em>
-    N
-   </em>
-   primeiros naturais ímpares. Exemplo, para
-   <em>
-    N
-   </em>
-   = 4, a saída deverá ser 1, 3, 5, 7.
+   6) Dado <em>N</em>, imprimir os <em>N</em> primeiros naturais ímpares. Exemplo, para <em>N</em> = 4, a saída deverá ser 1, 3, 5, 7.
   </p>
   <p>
    7) Durante os 30 dias do mês de abril foram tomadas as temperaturas médias diárias de Euclides da Cunha (BA). Determinar o número de dias desse mês com temperaturas abaixo de zero.
   </p>
   <p>
-   8) Dados
-   <em>
-    x
-   </em>
-   inteiro e
-   <em>
-    n
-   </em>
-   natural, calcular
-   <em>
-    x
-    <sup>
-     n
-    </sup>
-   </em>
-   .
+   8) Dados <em>x</em> inteiro e <em>n</em>natural, calcular <em>x<sup>n</sup></em>.
   </p>
   <p>
    9) Uma loja de discos anota diariamente durante o mês de março a quantidade de discos vendidos. Determinar em que dia desse mês ocorreu a maior venda e qual foi a quantidade de discos vendida nesse dia.
   </p>
   <p>
-   10) Dados o número
-   <em>
-    N
-   </em>
-   de alunos de uma turma de
-   <strong>
-    Programação em C#
-   </strong>
-   e suas notas da primeira prova, determinar a maior e a menor nota obtidas por essa turma (nota máxima = 100 e nota mínima = 0).
+   10) Dados o número <em>N</em> de alunos de uma turma de <strong>Programação em C#</strong> e suas notas da primeira prova, determinar a maior e a menor nota obtidas por essa turma (nota máxima = 100 e nota mínima = 0).
   </p>
   <p>
-   11) Dados
-   <em>
-    N
-   </em>
-   e uma sequência de
-   <em>
-    N
-   </em>
-   números inteiros, determinar a soma dos números pares.
+   11) Dados <em>N</em> e uma sequência de <em>N</em> números inteiros, determinar a soma dos números pares.
   </p>
   <p>
-   12) Dado
-   <em>
-    n
-   </em>
-   natural, determinar
-   <em>
-    n!
-   </em>
-   .
+   12) Dado <em>n</em> natural, determinar <em>n!</em>.
   </p>
   <p>
-   13) Dado
-   <em>
-    N
-   </em>
-   e dois números naturais
-   <em>
-    i
-   </em>
-   e
-   <em>
-    j
-   </em>
-   diferentes de 0, imprimir em ordem crescente os
-   <em>
-    N
-   </em>
-   primeiros naturais que são múltiplos de
-   <em>
-    i
-   </em>
-   ou de
-   <em>
-    j
-   </em>
-   ou de ambos. Exemplo, para
-   <em>
-    N
-   </em>
-   = 6,
-   <em>
-    i
-   </em>
-   = 2 e
-   <em>
-    j
-   </em>
-   = 3, a saída deverá ser: 0, 2, 3, 4, 6, 8.
+   13) Dado <em>N</em> e dois números naturais <em>i</em> e <em>j</em> diferentes de 0, imprimir em ordem crescente os <em>N</em> primeiros naturais que são múltiplos de <em>i</em> ou de <em>j</em> ou de ambos. Exemplo, para <em>N</em> = 6, <em>i</em> = 2 e <em>j</em> = 3, a saída deverá ser: 0, 2, 3, 4, 6, 8.
   </p>
   <p>
-   14) Dizemos que um número natural é
-   <em>
-    triangular
-   </em>
-   se ele é produto de três números naturais consecutivos. Exemplo, 120 é triangular, pois 4.5.6 = 120. Dado
-   <em>
-    N
-   </em>
-   natural, verificar se
-   <em>
-    N
-   </em>
-   é triangular.
+   14) Dizemos que um número natural é <em>triangular</em> se ele é produto de três números naturais consecutivos. Exemplo, 120 é triangular, pois 4.5.6 = 120. Dado <em>N</em> natural, verificar se <em>N</em> é triangular.
   </p>
   <p>
-   15) Dizemos que um número natural é
-   <em>
-    primo
-   </em>
-   se ele é divisível apenas por 1 e por ele mesmo. Dado
-   <em>
-    p
-   </em>
-   natural, verificar se
-   <em>
-    p
-   </em>
-   é primo.
+   15) Dizemos que um número natural é <em>primo</em> se ele é divisível apenas por 1 e por ele mesmo. Dado <em>p</em> natural, verificar se <em>p</em> é primo.
   </p>
   <p>
    16) Dados dois números inteiros positivos, determinar o máximo divisor comum entre eles usando o algoritmo de Euclides. Exemplo:
   </p>
   <p>
-   <img alt="" src="http://williamivanski.com.br/curso/euclides.png"/>
+   <img alt="" src="euclides.png"/>
   </p>
   <p>
    O mdc entre 1128 e 336 é 24.
   </p>
   <p>
-   17) Dado
-   <em>
-    N
-   </em>
-   inteiro positivo, dizemos que
-   <em>
-    N
-   </em>
-   é
-   <em>
-    perfeito
-   </em>
-   se for igual à soma de seus divisores positivos diferentes de
-   <em>
-    N
-   </em>
-   .
+   17) Dado <em>N</em> inteiro positivo, dizemos que <em>N</em> é <em>perfeito</em> se for igual à soma de seus divisores positivos diferentes de <em>N</em>.
    <br/>
    Exemplo: 6 é perfeito, pois 1 + 2 + 3 = 6.
    <br/>
    Verificar se um dado número inteiro positivo é perfeito.
   </p>
   <p>
-   18) Um matemático italiano da Idade Média conseguiu estudar o número de galhos em um certo nível de uma árvore através de uma sequência de números naturais que passou a ser conhecida como
-   <strong>
-    sequência de Fibonacci
-   </strong>
-   . O
-   <em>
-    n-ésimo
-   </em>
-   número da sequência de Fibonacci
-   <em>
-    F
-    <sub>
-     n
-    </sub>
-   </em>
-   é dado pela seguinte fórmula de recorrência:
+   18) Um matemático italiano da Idade Média conseguiu estudar o número de galhos em um certo nível de uma árvore através de uma sequência de números naturais que passou a ser conhecida como <strong>sequência de Fibonacci</strong>. O <em>n-ésimo</em> número da sequência de Fibonacci <em>F<sub>n</sub></em> é dado pela seguinte fórmula de recorrência:
    <br/>
-   <em>
-    F
-    <sub>
-     1
-    </sub>
-   </em>
-   = 1
+   <em>F<sub>1</sub></em> = 1
    <br/>
-   <em>
-    F
-    <sub>
-     2
-    </sub>
-   </em>
-   = 1
+   <em>F<sub>2</sub></em> = 1
    <br/>
-   <em>
-    F
-    <sub>
-     i
-    </sub>
-   </em>
-   =
-   <em>
-    F
-    <sub>
-     i-1
-    </sub>
-   </em>
-   +
-   <em>
-    F
-    <sub>
-     i-2
-    </sub>
-   </em>
-   para i &gt;= 3.
+   <em>F<sub>i</sub></em> = <em>F<sub>i-1</sub></em> + <em>F<sub>i-2</sub></em> para i &gt;= 3.
    <br/>
-   Faça um programa que dado
-   <em>
-    n
-   </em>
-   calcule
-   <em>
-    F
-    <sub>
-     n
-    </sub>
-   </em>
-   .
+   Faça um programa que dado <em>n</em> calcule <em>F<sub>n</sub></em>.
   </p>
   <p>
-   19) Dizemos que um número
-   <em>
-    i
-   </em>
-   é congruente módulo
-   <em>
-    m
-   </em>
-   a
-   <em>
-    j
-   </em>
-   se
-   <em>
-    i
-   </em>
-   mod
-   <em>
-    m
-   </em>
-   =
-   <em>
-    j
-   </em>
-   mod
-   <em>
-    m
-   </em>
-   .
+   19) Dizemos que um número <em>i</em> é congruente módulo <em>m</em> a <em>j</em> se <em>i</em> mod <em>m</em> = <em>j</em> mod <em>m</em>.
    <br/>
    Exemplo: 35 é congruente módulo 4 a 39, pois 35 mod 4 = 3 = 39 mod 4.
    <br/>
-   Dados
-   <em>
-    N
-   </em>
-   ,
-   <em>
-    j
-   </em>
-   e
-   <em>
-    m
-   </em>
-   naturais não nulos, imprimir os
-   <em>
-    N
-   </em>
-   primeiros naturais congruentes a
-   <em>
-    j
-   </em>
-   módulo
-   <em>
-    m
-   </em>
-   .
+   Dados <em>N</em>, <em>j</em> e <em>m</em> naturais não nulos, imprimir os <em>N</em> primeiros naturais congruentes a <em>j</em> módulo <em>m</em>.
   </p>
   <p>
    20) Dado um número natural na base binária, transformá-lo para a base decimal.
    <br/>
-   Exemplo, dado 10010 a saída será 18, pois 1.2
-   <sup>
-    4
-   </sup>
-   +0.2
-   <sup>
-    3
-   </sup>
-   +0.2
-   <sup>
-    2
-   </sup>
-   +1.2
-   <sup>
-    1
-   </sup>
-   +0.2
-   <sup>
-    0
-   </sup>
-   = 18.
+   Exemplo, dado 10010 a saída será 18, pois 1.2<sup>4</sup>+0.2<sup>3</sup>+0.2<sup>2</sup>+1.2<sup>1</sup>+0.2<sup>0</sup> = 18.
   </p>
   <p>
    21) Dado um número natural na base decimal, transformá-lo para a base binária.
@@ -433,36 +138,16 @@
    Exemplo: raiz de 9801 = 99 = 98 + 01. Portanto, 9801 é um dos números a ser impresso.
   </p>
   <p>
-   25) Dados
-   <em>
-    N
-   </em>
-   e uma sequência de
-   <em>
-    N
-   </em>
-   números inteiros, determinar quantos segmentos iguais consecutivos compõem essa sequência.
+   25) Dados <em>N</em> e uma sequência de <em>N</em> números inteiros, determinar quantos segmentos iguais consecutivos compõem essa sequência.
    <br/>
    Exemplo: a sequência 5,2,2,3,4,4,4,4,1,1 é formada por 5 segmentos de números iguais.
   </p>
   <p>
-   26) Dados um inteiro positivo
-   <em>
-    N
-   </em>
-   e uma sequência de
-   <em>
-    N
-   </em>
-   números inteiros, determinar o comprimento de um segmento crescente de comprimento máximo.
+   26) Dados um inteiro positivo <em>N</em> e uma sequência de <em>N</em> números inteiros, determinar o comprimento de um segmento crescente de comprimento máximo.
    <br/>
    Exemplos:
    <br/>
-   - Na sequência 5,10,3,
-   <strong>
-    2,4,7,9
-   </strong>
-   ,8,5 o comprimento do segmento crescente máximo é 4.
+   - Na sequência 5,10,3,<strong>2,4,7,9</strong>,8,5 o comprimento do segmento crescente máximo é 4.
    <br/>
    - Na sequência 10,8,7,5,2 o comprimento de um segmento crescente máximo é 1.
   </p>
@@ -471,8 +156,8 @@
   </p>
   <pre><code>int a, b, total, soma, termo;
 
-a = Int32.Parse(Console.ReadLine());
-b = Int32.Parse(Console.ReadLine());
+a = int.Parse(Console.ReadLine());
+b = int.Parse(Console.ReadLine());
 
 Console.WriteLine("({0},{1})", a, b);
 
@@ -493,8 +178,8 @@ while (a != 0)
 
     Console.WriteLine("Soma = {0}", soma);
 
-    a = Int32.Parse(Console.ReadLine());
-    b = Int32.Parse(Console.ReadLine());
+    a = int.Parse(Console.ReadLine());
+    b = int.Parse(Console.ReadLine());
 
     Console.WriteLine("({0},{1})", a, b);
 }
