--- a/modulo2.html
+++ b/modulo2.html
@@ -93,11 +93,14 @@
 
                             <!-- capitulo 2 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 2 - Bibliotecas</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1><a target="_blank" href="curso/modulo2lista2.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 2 - Bibliotecas</td>
+                                <td rowspan=2><a href="curso/modulo2capitulo2.pptx">Slides</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo2lista2.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2>Respostas</td>
                                 <td><a href="https://youtu.be/1DTjrreHiD4">Videoaula 15/08/2015</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="https://youtu.be/Wf7jv7sFDwU">Videoaula 22/08/2015</a></td>
                             </tr>
 
                             <!-- capitulo 3 -->
