Incluindo avaliações no cronograma

--- a/modulo1.html
+++ b/modulo1.html
@@ -113,6 +113,12 @@
                                 <td rowspan=1>Respostas</td>
                                 <td><a href="https://youtu.be/iWkbWiNOM7I">Videoaula 22/08/2015</a></td>
                             </tr>
+
+                            <!-- avaliacao 1 -->
+                            <tr>
+                                <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 1</td>
+                                <td rowspan=1>Quest&otilde;es</td>
+                            </tr>
                             
                             <!-- capitulo 5 -->
                             <tr>
@@ -139,6 +145,12 @@
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
                                 <td></td>
+                            </tr>
+
+                            <!-- avaliacao 2 -->
+                            <tr>
+                                <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 2</td>
+                                <td rowspan=1>Quest&otilde;es</td>
                             </tr>
                         </table>
                         </p>
