--- a/modulo2.html
+++ b/modulo2.html
@@ -112,6 +112,12 @@
                                 <td></td>
                             </tr>
 
+                            <!-- avaliacao 1 -->
+                            <tr>
+                                <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 1</td>
+                                <td rowspan=1>Quest&otilde;es</td>
+                            </tr>
+
                             <!-- capitulo 4 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 4 - Primeiro Programa Completo no Console</td>
@@ -137,6 +143,12 @@
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
                                 <td></td>
+                            </tr>
+
+                            <!-- avaliacao 2 -->
+                            <tr>
+                                <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 2</td>
+                                <td rowspan=1>Quest&otilde;es</td>
                             </tr>
                         </table>
                         </p>
